--- a/src/POPOSList.css
+++ b/src/POPOSList.css
@@ -4,4 +4,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 40px;
+  padding: 2em;
+}
+/* Smaller screens and tablets */
+@media only screen and (max-width: 700px) {
+	.POPOSList {
+		grid-template-columns: 1fr;
+	}
 }
